# austudio-template-server

./: .env  .gitignore  Cargo.toml
frontend/: .babelrc  package.json  webpack.config.js
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Item.tsx  List.tsx
frontend/src/utils/: icons.ts
frontend/static/: index.html
migrations/2020-01-21-152122_create_versions/: down.sql  up.sql
src/: error.rs  main.rs  schema.rs
src/app/: index.rs  mod.rs  not_found.rs  static_files.rs  version.rs
src/dao/: create_version.rs  mod.rs  structs.rs
src/db/: mod.rs  version.rs
src/models/: mod.rs  version.rs
src/utils/: auth.rs  extract_file.rs  last_version.rs  mod.rs
versions/1/0/1/: index.html
