[package]
name = "austudio-template-server"
version = "0.1.0"
authors = ["delbertbeta <delbertbeta@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
