[package]
name = "austudio-template-server"
version = "0.1.0"
authors = ["delbertbeta <delbertbeta@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix = "0.9.0"
actix-rt = "1.0"
actix-files = "0.2.1"
actix-multipart = "0.2.0"
diesel = { version = "1.4.2", features = ["chrono", "sqlite", "serde_json"] }
dotenv = "0.10.1"
failure = "0.1.5"
validator = "0.8.0"
validator_derive = "0.8.0"
serde_derive = "1.0.91"
serde_json = "1.0.39"
serde = "1.0.91"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.10.0"
futures = "0.3.1"
libsqlite3-sys = { version = "*", features = ["bundled"] }
tar = "0.4.26"
flate2 = "1.0.13"
